css/style.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&family=PT+Sans&display=swap');


*{
    font-family: 'Oswald', sans-serif;
    font-family: 'PT Sans', sans-serif;
}

.container{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    width: 1200px;
    height: 600px;
    background-color: antiquewhite;
    margin: auto;
    justify-content: space-evenly;
    
}

.items{
    width: 180px;
    height: 180px;
    background-color:rgb(85, 64, 69);
    color: white;
    margin: 20px;
    box-sizing: border-box;
    font-size: 35px;
    padding: 45px 0;
    text-align: center;
    
}
a{
    text-decoration: none;
}
 
.items:hover{
    background-color: crimson;
    
}

